--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="min_brush_size">10dp</dimen>
     <dimen name="max_brush_size">50dp</dimen>
 
-    <dimen name="min_text_size">12sp</dimen>
-    <dimen name="max_text_size">50sp</dimen>
+    <dimen name="min_text_size">8sp</dimen>
+    <dimen name="default_text_size">19sp</dimen>
+    <dimen name="max_text_size">30sp</dimen>
 </resources>
